// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReactionPicker /> snapshot should match snapshot 1`] = `
<ReactionPicker>
  <div
    className="md-reaction-picker-wrapper"
  />
</ReactionPicker>
`;

exports[`<ReactionPicker /> snapshot should match snapshot with className 1`] = `
<ReactionPicker
  className="example-class"
>
  <div
    className="example-class md-reaction-picker-wrapper"
  />
</ReactionPicker>
`;

exports[`<ReactionPicker /> snapshot should match snapshot with id 1`] = `
<ReactionPicker
  id="example-id"
>
  <div
    className="md-reaction-picker-wrapper"
    id="example-id"
  />
</ReactionPicker>
`;

exports[`<ReactionPicker /> snapshot should match snapshot with style 1`] = `
<ReactionPicker
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    className="md-reaction-picker-wrapper"
    style={
      Object {
        "color": "pink",
      }
    }
  />
</ReactionPicker>
`;
